--- a/app/views/welcome/status.html.slim
+++ b/app/views/welcome/status.html.slim
@@ -1,7 +1,6 @@
-- content_for :title do
-  | Network Status
+- content_for :title do 'Network Status' end
     
-div id="network_status"
+#network_status
 
   #map_canvas
 
@@ -35,8 +34,8 @@ div id="network_status"
         tr class="peer" data-ipv4_address="#{peer.ip}"
           td #{peer.ip}
           td #{peer.port}
-          td #{number_to_human_size(peer.uploaded, precision: 3}
-          td #{number_to_human_size(peer.downloaded, precision: 3}
+          td #{number_to_human_size(peer.uploaded, precision: 3)}
+          td #{number_to_human_size(peer.downloaded, precision: 3)}
           td #{time_ago_in_words peer.updated_at} ago
           td #{peer.peer_id}
         
