--- a/app/views/users/manage.html.slim
+++ b/app/views/users/manage.html.slim
@@ -39,7 +39,7 @@
 								td
 									= user.email
 									br
-									img src="#{gravatar_image_url(current_user.email, filetype: :png, rating: 'pg', size: 20, secure: true)}"
+									img src="#{gravatar_image_url(user.email, filetype: :png, rating: 'pg', size: 20, secure: true)}"
 								td
 									= time_ago_in_words user.created_at
 									|  ago.
