--- a/app/views/welcome/concepts.html.slim
+++ b/app/views/welcome/concepts.html.slim
@@ -19,14 +19,14 @@
 				dd An authorized user wanting all current and future data published to a given feed uses the BitTorious portal to find download links, and their locally installed Client to either automatically acquire all feed data as it is available, or selectively download individual torrents.
 				dt Seeding
 				dd A Client that has a full or partial copy of a torrent will, by default, be available to distribute the torrents to other subscribers. Limits can be set on throughput usage, time of use, quality of service, hard download/upload caps, or be turned off completely for each individual client.
-			p Accounts within the web application are managed in a role-based manner. Each role, below, is applied globally to appropriate users, though only administrative users may assign these roles.
+			p Accounts within the web application are managed in a role-based manner. Each role, below, is applied per user per feed. You may set permissions for feeds which you have Publisher access to. (Administrative automatically get access to everything.) All users may log in to the portal even if they haven't yet been granted access to any feeds!
 			dl.dl-horizontal
 				dt Subscriber
-				dd The default role. May log into the portal, search for content, and use download links.
+				dd May join any torrent in the feed, but not make any changes to it.
 				dt Publisher
-				dd All abilities as Subscribers, plus the ability to create, update and delete feeds.
+				dd All abilities as Subscribers, plus the ability to update and delete the feed, publish new torrents to it, and set feed access permissions.
 				dt Administrator
-				dd All abilities as Publishers (and Subscribers), plus the ability to manage user accounts and grant/revoke roles.
+				dd A global role granting Subscriber and Publisher rights to all feeds, plus the ability to create new feeds, check overall network status, and manage user accounts.
 
 		.col-md-6
 			h2
@@ -38,15 +38,15 @@
 				|  Portal
 			p If you'd like to run your own private BitTorrent network, you'll need an instance of the BitTorious portal: the cross-platform web application you're looking at right now. The portal supports the latest stable versions of mainstream, HTML5-friendly web browsers. Specifically, support is included for:
 			ul
-				li Firefox
 				li Chrome
+				li Firefox
 				li Safari
 				li Internet Explorer
-			p Internally, the portal's web application stack utilizes multiple high-performance databases to store active peer connection data, system accounts, feeds, torrents and torrent metadata.
+			p Internally, the portal's web application stack utilizes a relational database to store active peer connection data, system accounts, feeds, torrents and torrent metadata.
 			h3
 				span.icon.icon-desktop
 				|  Clients
-			p A client is simply a machine running a standard BitTorrent client to seed and/or download content to/from feeds, respectively. After the original publishing machine completes the initial seeding process to the cloud, it can optionally be taken offline. As long as data on the aggregate network of online Client machines contains all pieces of a given torrent, the data can be downloaded to completion by any current or new client. This characteristic of collective data replication provides an extremely resilient, high-ability architecture.
+			p A client is simply a machine running a supported BitTorrent client to seed and/or download content to/from feeds, respectively. After the original publishing machine completes the initial seeding process to the swarm, it can optionally be taken offline. As long as data on the aggregate network of online Client machines contains all pieces of a given torrent, the data can be downloaded to completion by any current or future client. This characteristic of collective data replication provides an extremely resilient, high-ability architecture.
 			p Note that it is generally assumed that the throughput rates of your underlying file system greatly exceed the throughput available over your Internet connection. If this is the case -- which it almost certainly is -- higher capacity disks will likely prove a better investment than higher throughput disks.
 			h4 Dedicated Clients
 			p The optionally addition of "dedicated" clients adds another availability component to the high-availability nature of the client system. The notion of a "dedicated" client is purely semantic, and there is no technological difference versus a normal client, with the understanding that a dedicated client is expected to:
@@ -65,23 +65,22 @@
 				li Web portal login.
 				li Client data feed (RSS) update requests.
 				li Client registration and keep-alive with the web portal.
-			p This means that if Alice forwards your published data link to Bob, Bob will neither be able to log in to the portal to look up additional metadata nor register his client with the official tracker. (If Alice posts content to a system such as an FTP server outside the network, however, we of course can't control that.)
-			p BitTorious controls access to metadata and torrent links solely behind the authenticated and authorized portal via simple email/password accounts granted by the system administrator. New users may request access via the portal homepage.
+			p BitTorious controls access to the peer tracker using an user-specific authentication token embedded in the .torrent file downloaded by the user. For this reason, you should never share your .torrent files. New users may request access via the portal homepage.
 			p We also encourage the use of password protected compression such as Zip or Gzip prior to publication for sensitive data as an additional layer of security.
-			p Note that the compliance level of all systems in the network is given to individual client sites to enforce, as BitTorious doesn't know about the infrastructure at individual sites. BitTorious (and underlying BitTorrent protocols) are agnostic to computing environment and can be run in any cloud computing environment that provides IaaS, but cannot programmatically determine which data, if any, is subject to special compliance rules. For uses subject to environmental restrictions such as HIPAA, BitTorious can be hosted on appropriately protected IT infrastructure. Please consider the nature of data and metadata needing publication prior to deploying your own instance of the portal.
+			p Note that the compliance level of all systems in the network is given to individual client sites to enforce, as BitTorious doesn't know about the infrastructure at individual sites. BitTorious (and underlying BitTorrent protocols) are agnostic to computing environment and can be run in any cloud computing environment that provides IaaS, but cannot programmatically determine which data, if any, is subject to special compliance rules. For uses subject to environmental restrictions such as HIPAA, BitTorious can be hosted on appropriately protected IT infrastructure. Please consider the nature of your data and metadata needing publication prior to deploying your own instance of the portal.
 		
 		.col-md-6#it_department
 			h3
 				span.icon.icon-home
 				|  Household Friendly
 			hr
-			p Accessing your data feeds at home is trivial with routers supporting UPnP. If you have a older router or don't want to enable UPnP, a few simple port forwarding rules for your BitTorrent client will work just as well!
+			p Accessing your data feeds on typical "home" networks is trivial with routers supporting UPnP. If you have a older router or don't want to enable UPnP, a few simple port forwarding rules for your BitTorrent client will work just as well!
 
 			h3
 				span.icon.icon-tasks
 				|  Enterprise Manageability
 			hr
-			p Please let your IT department make adequate preparations to prepare for fluctuating use of the overall client network. Specifically, the following checklist can be used as a starting point of consideration when planning to deploy Clients internal to your organization:
+			p Please let your IT department make adequate preparations to prepare for fluctuating use of the overall client network. Specifically, the following checklist can be used as a starting point of consideration when planning to deploy clients internal to your organization:
 			table.table.table-condensed.table-striped
 				thead
 					tr
