Starting AngularJS-ization.

--- a/app/views/feeds/_form.html.slim
+++ b/app/views/feeds/_form.html.slim
@@ -19,7 +19,7 @@
 	.checkbox
 		label
 			= f.check_box :enable_public_archiving
-			| Enable future archiving of torrents published to this feed on volunteer networks. (Not yet implemented!)
+			| Enable archiving of all torrents published to this feed to anonymous volunteer peers. All feed data will effectively becomes publically-accessable.
 		
 	.form-group#feed_buttons
 		= f.submit "Save", :class => 'btn btn-primary btn-lg'
