--- a/app/views/feeds/show.rss.slim
+++ b/app/views/feeds/show.rss.slim
@@ -1,26 +1,17 @@
 = '<?xml version="1.0" encoding="UTF-8" ?>'.html_safe
 rss version="2.0"
   channel
-    title
-      = @feed.name
+    title = @feed.name
     description RSS 2.0 for #{@feed.name} data.
-    link
-      = link_to @feed.slug
-    lastBuildDate
-      = @feed.updated_at.to_formatted_s(:rfc822)
-    pubDate
-      = @feed.created_at.to_formatted_s(:rfc822)
+    link = link_to @feed.slug
+    lastBuildDate = @feed.updated_at.to_formatted_s(:rfc822)
+    pubDate = @feed.created_at.to_formatted_s(:rfc822)
     ttl 1800
     - @feed.torrents.each do |t|
       item
-        title
-          = t.name
-        description 
-          = t.name + " uploaded by " + t.user.to_s + " on " + t.created_at.strftime("%A, %B %d, %Y at %T:%M%p")  + '.'
-        link
-          = token_url(torrent_path(t, :format => :torrent))
-        enclosure url="#{token_url(torrent_path(t, :format => :torrent))}" type="application/x-bittorrent"
-        guid
-          = t.info_hash
-        pubDate
-          = t.created_at
+        title = t.name
+        description = t.name + " uploaded by " + t.user.to_s + " on " + t.created_at.strftime("%A, %B %d, %Y at %T:%M%p")  + '.'
+        link = token_url(feed_torrent_path(t.feed, t, :format => :torrent))
+        enclosure url="#{token_url(feed_torrent_path(t.feed, t, :format => :torrent))}" type="application/x-bittorrent"
+        guid = t.info_hash
+        pubDate = t.created_at
