--- a/app/views/torrents/show.html.slim
+++ b/app/views/torrents/show.html.slim
@@ -46,7 +46,7 @@ section.col-md-12#disqus
   #disqus_thread
 javascript:
     var disqus_shortname = 'BitTorious';
-    var disqus_identifier = '#{torrent_url(resource)}';
+    var disqus_identifier = '#{feed_torrent_url(resource.feed, resource)}';
     var disqus_title = '#{resource.name}';
 javascript:
     /* * * DON'T EDIT BELOW THIS LINE * * */
